# RPL

./: .ansi  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cve_2020_25016  rust-toolchain  rustfmt.toml
.cargo/: config.toml
.github/workflows/: main.yml
crates/: Cargo.toml
crates/lintcheck/: 1000.toml  Cargo.toml  README.md  lintcheck_crates.toml  perf.toml  test_sources.toml
crates/rpl_constraints/: Cargo.toml
crates/rpl_constraints/src/: konst.rs  lib.rs
crates/rpl_constraints/src/attributes/: body.rs  mod.rs  safety.rs  visibility.rs
crates/rpl_constraints/src/predicates/: locals.rs  mod.rs  multiple_consts.rs  multiple_tys.rs  single_const.rs  single_fn.rs  single_ty.rs  translate.rs  trivial.rs  ty_const.rs
crates/rpl_context/: Cargo.toml
crates/rpl_context/src/: arena.rs  context.rs  lib.rs
crates/rpl_context/src/pat/: attr.rs  error.rs  item.rs  matched.rs  mod.rs  non_local_meta_vars.rs  pretty.rs  table.rs  ty.rs  utils.rs
crates/rpl_context/src/pat/mir/: mod.rs  pretty.rs  visitor.rs
crates/rpl_driver/: Cargo.toml  messages.en.ftl
crates/rpl_graphviz/: Cargo.toml
crates/rpl_graphviz/src/: graph.rs  lib.rs
crates/rpl_graphviz/tests/: test.rs
crates/rpl_graphviz/tests/graphs/: alloc_cast_check_write_pat_cfg.dot  alloc_cast_check_write_pat_ddg.dot  alloc_cast_write_pat_cfg.dot  alloc_cast_write_pat_ddg.dot  alloc_check_cast_write_pat_cfg.dot  alloc_check_cast_write_pat_ddg.dot  and_then_inlined_pat_cfg.dot  and_then_inlined_pat_ddg.dot  control_flow_pat_cfg.dot  control_flow_pat_ddg.dot  cve_2020_35877_pat_cfg.dot  cve_2020_35877_pat_ddg.dot  cve_2020_35892_3_pat_cfg.dot  cve_2020_35892_3_pat_ddg.dot  cve_2020_35893_pat_cfg.dot  cve_2020_35893_pat_ddg.dot  cve_2021_15551_congruence_pat_cfg.dot  cve_2021_15551_congruence_pat_ddg.dot  cve_2021_15551_divergent_pat_cfg.dot  cve_2021_15551_divergent_pat_ddg.dot  cve_2021_29941_2_pat_cfg.dot  cve_2021_29941_2_pat_ddg.dot  cve_2021_29941_pat_cfg.dot  cve_2021_29941_pat_ddg.dot  cve_2021_29941_uninitialized_slice_pat_cfg.dot  cve_2021_29941_uninitialized_slice_pat_ddg.dot  unchecked_ptr_offset_base_pat_cfg.dot  unchecked_ptr_offset_base_pat_ddg.dot  unchecked_ptr_offset_le_pat_cfg.dot  unchecked_ptr_offset_le_pat_ddg.dot  unchecked_ptr_offset_lt_pat_cfg.dot  unchecked_ptr_offset_lt_pat_ddg.dot
crates/rpl_interface/: Cargo.toml  messages.en.ftl
crates/rpl_match/: Cargo.toml
crates/rpl_match/src/: adt.rs  compose.rs  fns.rs  lib.rs  match2.rs  mir.rs  normalized.rs  predicate_evaluator.rs  reachability.rs  resolve.rs  statement.rs  ty.rs
crates/rpl_match/src/graph/: mir.rs  pat.rs
crates/rpl_match/src/match2/: matched.rs  with_call_stack.rs
crates/rpl_match/src/matches/: artifact.rs  color.rs  mod.rs
crates/rpl_meta/: Cargo.toml
crates/rpl_mir/: Cargo.toml
crates/rpl_mir_graph/: Cargo.toml
crates/rpl_mir_transform/: Cargo.toml
crates/rpl_parser/: Cargo.toml  build.rs
crates/rpl_patterns/: Cargo.toml  build.rs  messages.en.ftl
crates/rpl_predicates/: Cargo.toml
crates/rpl_resolve/: Cargo.toml
crates/rpl_resolve/src/: lib.rs
crates/rpl_utils/: Cargo.toml  messages.en.ftl
docs/: usage.md
docs/development/: usage.md
docs/patterns-pest/: CVE-2018-20992.rpl  CVE-2018-21000.rpl  CVE-2019-15548.rpl  CVE-2020-25016-MIR.rpl  CVE-2020-25016.rpl  CVE-2020-27376.rpl  CVE-2020-35860.rpl  CVE-2020-35877.rpl  CVE-2020-35881.rpl  CVE-2020-35888.rpl  CVE-2020-35892-3.rpl  CVE-2020-35898-9.rpl  CVE-2020-35901-2.rpl  CVE-2020-35907.rpl  CVE-2021-25905.rpl  CVE-2021-27376-MIR.rpl  CVE-2021-27376.rpl  (+12 more)
lintcheck/: README.md
scripts/: check.sh  clippy-timing.py  crates.py  run.sh  timing.sh  uitest.sh
src/: driver.rs
tests/: compile-test.rs  normalizer.rs  normalizer.stderr
(+556 files in other folders)
