[package]
name = "rpl_constraints"
version.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
rpl_parser.workspace = true
rpl_resolve.workspace = true

thiserror.workspace = true
derive_more.workspace = true

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
