[package]
name = "rpl_constraints"
version.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
rpl_parser.workspace = true
rpl_resolve.workspace = true

derive_more.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[features]
strict = []

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
