[package]
name = "rpl_context"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
derive_more.workspace = true
rpl_meta.workspace = true
rpl_parser.workspace = true
rpl_predicates.workspace = true
sync-arena.workspace = true

[features]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
