[package]
name = "rpl_graphviz"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
rpl_context.workspace = true
rpl_match.workspace = true
rpl_meta.workspace = true
rpl_mir_graph.workspace = true
rpl_parser.workspace = true

gsgdt.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
pest_typed.workspace = true
quote.workspace = true

[features]
interblock_edges = []

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true