[package]
name = "rpl_match"
version.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
derive_more.workspace = true
rpl_context.workspace = true
rpl_resolve.workspace = true
rpl_constraints.workspace = true
rpl_mir_graph.workspace = true
rpl_meta.workspace = true

[features]
default = ["interblock_edges"]
strict = []
interblock_edges = ["rpl_mir_graph/interblock_edges"]
timing = []

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
